# copilot

./: .gitignore  Cargo.toml  NOTICE  README.md  install.ps1  install.sh  package-lock.json  package.json
assets/zellij/: arc-split.kdl  config.kdl
docs/: RELEASING.md
patches/: zellij-0.44.3-arc-appliance.patch
plugin/: .mcp.json  hooks.json  plugin.json
plugin/extensions/agent-run-cache/: extension.mjs
rust/src/: cli.rs  embedder.rs  judge.rs  main.rs  mcp.rs  plugin.rs  retrieval.rs  review_capture.rs  split.rs  store.rs  telemetry.rs  ui.rs
scripts/: build-npm-packages.cjs  build-release-binaries.cjs  build-zellij-appliance.cjs  install-rust-binary.cjs  verify-rust-local-embeddings.cjs
src/: acp.ts  bundle.ts  cli.ts  config.ts  copilot-command.ts  copilot-extension-runtime.ts  copilot-extension.ts  copilot-injection.ts  copilot-plugin.ts  copilot-root.ts  copilot-tab.ts  copilot.ts  declined.ts  download.ts  hook-status.ts  hooks.ts  install.ts  invocation-lock.ts  judge-models.ts  judge-reachability.ts  ledger.ts  local-embeddings.ts  mcp.ts  observer.ts  otel.ts  paths.ts  retrieval-reputation.ts  retrieval.ts  review-decision.ts  review.ts  runtime.ts  sidecar.ts  store.ts  telemetry.ts  types.ts  ui-data.ts  ui-model.ts  ui-runtime.ts  ui-view.ts
test/: cli-json.test.js  copilot-tab.test.js  install-migration.test.js  public-regression.test.js  telemetry.test.js  ui-view.test.js
test/fixtures/: aborted-command.jsonl  long-prompt-noise.jsonl  multi-goal-session.jsonl  sidecar-marker.jsonl  user-real-session.jsonl
tests/: rust_parity.rs
